Fix menu item alignment

--- a/apps/desktop/desktop/src/main/resources/css/bisq_easy.css
+++ b/apps/desktop/desktop/src/main/resources/css/bisq_easy.css
@@ -323,33 +323,31 @@
     -fx-label-padding: 0 7;
 }
 
+/* OFFER LIST FILTERS */
+.dropdown-offer-list-direction-filter-menu,
+.dropdown-offer-list-payment-filter-menu {
+    -fx-max-height: 20;
+}
+
 /* BUY FROM */
 .dropdown-offer-list-direction-filter-menu .buy-from-offers {
-    -fx-label-padding: 0 0 0 5;
     -fx-text-fill: -bisq2-green;
 }
 
 .dropdown-offer-list-direction-filter-menu:hover .buy-from-offers {
-    -fx-label-padding: 0 0 0 5;
     -fx-text-fill: -bisq2-green-lit-20;
 }
 
 /* SELL TO */
 .dropdown-offer-list-direction-filter-menu .sell-to-offers {
-    -fx-label-padding: 0 0 0 5;
     -fx-text-fill: -bisq2-red-lit-20;
 }
 
 .dropdown-offer-list-direction-filter-menu:hover .sell-to-offers {
-    -fx-label-padding: 0 0 0 5;
     -fx-text-fill: -bisq2-red-lit-40;
 }
 
 /* PAYMENT METHODS FILTER */
-.dropdown-offer-list-payment-filter-menu {
-    -fx-padding: 0 5 0 5;
-}
-
 .active-filter {
     -fx-text-fill: -fx-light-text-color !important;
 }
